max button click logic

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body> 
-    <div id="buttonDivs"></div>
+    <div id="btnDiv"></div>
     <script src="./assets/scripts/genres.js"></script>
 </body>
 
