button to undo last change

--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
 
 <body> 
     <div id="buttonDivs"></div>
+    <div id="undo">undo</div>
+    <div id="reset">reset</div>
+
     <script src="./assets/scripts/genres.js"></script>
 </body>
 
