fixed undo and reset

--- a/test.html
+++ b/test.html
@@ -13,14 +13,8 @@
 
 
 <body> 
-    <div id="btnDiv"></div>
 
-<!--     <div id="buttonDivs"></div> -->
-    <button id="undo">undo</button>
-    <button id="reset">reset</button>
-    <button id="next">next</button>
-
-    <script src="./assets/scripts/genres.js"></script>
+    <script src="./assets/scripts/music-algorithm.js"></script>
 </body>
 
 </html>
