--- a/player.html
+++ b/player.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="./player.css">
     <title>Document</title>
 </head>
@@ -15,7 +16,13 @@
                 <h2 class="album-title">Make Yourself</h2><!--  /.album-title -->
                 <h3 class="song-title">"Stellar"</h3><!--  /.song-title -->
                 <div class="music-player-controls">
-                    <div class="control-back"></div><!--  /.control-back -->
+                    <div class="control-fav">
+                      <!-- <button class="round-Button" id="favBtn">
+                        <i class="fa fa-star" aria-hidden="true"></i>
+
+                      </button> -->
+                    </div><!--  /.control-favorite -->
+          
                     <div class="control-play"></div><!--  /.control-play -->
                     <div class="control-forwards"></div><!--  /.control-forwards -->
                 </div><!--  /.music-player-controls -->
