--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
     <div id="btnDiv"></div>
 
 <!--     <div id="buttonDivs"></div> -->
-    <button id="undo">undo</button>
-    <button id="reset">reset</button>
-    <button id="next">next</button>
+    <button id="undo">Undo</button>
+    <button id="reset">Reset</button>
+    <button id="next">Next</button>
 
     <script src="./assets/scripts/genres.js"></script>
 </body>
