--- a/index.html
+++ b/index.html
@@ -8,14 +8,12 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"
         integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="assets/CSS/style.css">
+    <link rel="stylesheet" href="./assets/CSS/style.css">
 </head>
 
 
 <body> 
     <div id="btnDiv"></div>
-
-<!--     <div id="buttonDivs"></div> -->
     <button id="undo">Undo</button>
     <button id="reset">Reset</button>
     <button id="next">Next</button>
