--- a/player.html
+++ b/player.html
@@ -1,39 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="./player.css">
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+  <link rel="stylesheet" href="./player.css">
+  <title>Document</title>
 </head>
 <body>
-    <div class="music-player-container is-playing">
-        <div class="music-player">
-            <div class="player-content-container">
-                <h1 class="artist-name">Incubus</h1><!--  /.track-title -->
-                <h2 class="album-title">Make Yourself</h2><!--  /.album-title -->
-                <h3 class="song-title">"Stellar"</h3><!--  /.song-title -->
-                <div class="music-player-controls">
-                    <div class="control-fav">
-                      <!-- <button class="round-Button" id="favBtn">
-                        <i class="fa fa-star" aria-hidden="true"></i>
-
-                      </button> -->
-                    </div><!--  /.control-favorite -->
-          
-                    <div class="control-play"></div><!--  /.control-play -->
-                    <div class="control-forwards"></div><!--  /.control-forwards -->
-                </div><!--  /.music-player-controls -->
-            </div><!--  /.player-content-container -->
-        </div><!--  /.music-player -->
-        <div class="album">
-            <div class="album-art"></div><!--  /.album-art -->
-            <div class="vinyl"></div><!--  /.vinyl -->
-        </div><!--  /.album-art -->
+  <div class="music-player-container is-playing">
+    <div class="music-player">
+      <div class="player-content-container">
+        <h1 class="artist-name">Incubus</h1><!--  /.track-title -->
+        <h2 class="album-title">Make Yourself</h2><!--  /.album-title -->
+        <h3 class="song-title">"Stellar"</h3><!--  /.song-title -->
+        <div class="music-player-controls">
+          <a class="btn-floating btn-large waves-effect waves-light yellow"><i class="material-icons">play</i></a>
+          <a class="btn-floating btn-large waves-effect waves-light yellow"><i class="material-icons">fast-forward</i></a>
+          <a class="btn-floating btn-large waves-effect waves-light red"><i class="material-icons">favorite</i></a>
+          <!-- <div class="control-back"></div> /.control-back -->
+          <!-- <div class="control-play"></div> /.control-play -->
+          <!-- <div class="control-forwards"></div> /.control-forwards -->
+        </div><!--  /.music-player-controls -->
+      </div><!--  /.player-content-container -->
     </div><!--  /.music-player -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-    <script src="./player.js"></script>
+    <div class="album">
+      <div class="album-art"></div><!--  /.album-art -->
+      <div class="vinyl"></div><!--  /.vinyl -->
+    </div><!--  /.album-art -->
+  </div><!--  /.music-player -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+  <script src="./player.js"></script>
 </body>
 </html>
