--- a/player.html
+++ b/player.html
@@ -16,8 +16,8 @@
         <h2 class="album-title">Make Yourself</h2><!--  /.album-title -->
         <h3 class="song-title">"Stellar"</h3><!--  /.song-title -->
         <div class="music-player-controls">
-          <a class="btn-floating btn-large waves-effect waves-light yellow"><i class="material-icons">play</i></a>
-          <a class="btn-floating btn-large waves-effect waves-light yellow"><i class="material-icons">fast-forward</i></a>
+          <a class="btn-floating btn-large waves-effect cyan"><i class="material-icons">play_arrow</i></a>
+          <a class="btn-floating btn-large waves-effect cyan"><i class="material-icons">fast_forward</i></a>
           <a class="btn-floating btn-large waves-effect waves-light red"><i class="material-icons">favorite</i></a>
           <!-- <div class="control-back"></div> /.control-back -->
           <!-- <div class="control-play"></div> /.control-play -->
