--- a/player.html
+++ b/player.html
@@ -16,18 +16,28 @@
         <h2 class="album-title">Make Yourself</h2><!--  /.album-title -->
         <h3 class="song-title">"Stellar"</h3><!--  /.song-title -->
         <div class="music-player-controls">
+
+<!-- ADD AUDIO TAG CORRECTLY (BELOW TAG IS INCORRECT) -->
+
+          <audio controls>
+            <source src="">
+              
+          </audio>
+
+
           <a class="btn-floating btn-large waves-effect cyan"><i class="material-icons">play_arrow</i></a>
           <a class="btn-floating btn-large waves-effect cyan"><i class="material-icons">fast_forward</i></a>
           <a class="btn-floating btn-large waves-effect waves-light red"><i class="material-icons">favorite</i></a>
           <!-- <div class="control-back"></div> /.control-back -->
           <!-- <div class="control-play"></div> /.control-play -->
           <!-- <div class="control-forwards"></div> /.control-forwards -->
+
         </div><!--  /.music-player-controls -->
       </div><!--  /.player-content-container -->
     </div><!--  /.music-player -->
     <div class="album">
       <div class="album-art"></div><!--  /.album-art -->
-      <div class="vinyl"></div><!--  /.vinyl -->
+      
     </div><!--  /.album-art -->
   </div><!--  /.music-player -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
