--- a/test.html
+++ b/test.html
@@ -9,6 +9,7 @@
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"
         integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="assets/CSS/style.css">
+    <script src="https://connect.soundcloud.com/sdk/sdk-3.3.2.js"></script>
 </head>
 
 
