--- a/test.html
+++ b/test.html
@@ -10,6 +10,7 @@
         integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="assets/CSS/style.css">
     <script src="https://connect.soundcloud.com/sdk/sdk-3.3.2.js"></script>
+    <!-- <script src="https://sdk.scdn.co/spotify-player.js"></script> -->
 </head>
 
 
