--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
         <div id="nextDiv">
             <button id="next">Next</button>
         </div>
+        <a href="./youtube.html">youtube</a>
     </div>
 
     <script src="./assets/scripts/genres.js"></script>
