testing youtube api

--- a/youtube.html
+++ b/youtube.html
@@ -75,15 +75,17 @@
       setSigninStatus();
     }
 
+    // $(document).ready(function () {
+    //   $('#test').on('click',function() {
+    //     $.ajax({
+    //         url: 'https://developers.google.com/apis-explorer/#p/youtube/v3/youtube.search.list?q=eminem&type=video',
+    //         type: 'GET'  
+    //     }).then( function(response){
+    //         console.log(response)
+    //     })
+    //   })
+    // })
 
-    $('#test').on('click',function() {
-              $.ajax({
-                  url: 'https://developers.google.com/apis-explorer/#p/youtube/v3/youtube.search.list?q=eminem&type=video',
-                  type: 'GET'  
-              }).then( function(response){
-                  console.log(response)
-              })
-            })
   </script>
   
   <button id="sign-in-or-out-button"
