--- a/test.html
+++ b/test.html
@@ -11,6 +11,10 @@
     <link rel="stylesheet" href="assets/CSS/style.css">
     <script src="https://connect.soundcloud.com/sdk/sdk-3.3.2.js"></script>
     <!-- <script src="https://sdk.scdn.co/spotify-player.js"></script> -->
+    <script async defer src="https://apis.google.com/js/api.js"
+        onload="this.onload=function(){};handleClientLoad()"
+        onreadystatechange="if (this.readyState === 'complete') this.onload()">
+    </script>
 </head>
 
 
