--- a/player.html
+++ b/player.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
 
   <meta charset="UTF-8">
@@ -10,29 +11,36 @@
   <title>Document</title>
 
 </head>
+
 <body>
-  <div class="music-player-container is-playing">
+  <div class="music-container is-playing">
     <div class="music-player">
       <div class="player-content-container">
-        <h1 class="artist-name">Incubus</h1><!--  /.track-title -->
-        <h2 class="album-title">Make Yourself</h2><!--  /.album-title -->
-        <h3 class="song-title">"Stellar"</h3><!--  /.song-title -->
+        <!-- artist name would go here -->
+        <h1 class="artist-name">Incubus</h1>
+
+
+        <h2 class="album-title">Make Yourself</h2>
+        <h3 class="song-title">"Stellar"</h3>
         <div class="music-player-controls">
-          <a class="btn-floating btn-large waves-effect cyan"><i class="material-icons">play_arrow</i></a>
-          <a class="btn-floating btn-large waves-effect cyan"><i class="material-icons">fast_forward</i></a>
-          <a class="btn-floating btn-large waves-effect waves-light red"><i class="material-icons">favorite</i></a>
-          <!-- <div class="control-back"></div> /.control-back -->
-          <!-- <div class="control-play"></div> /.control-play -->
-          <!-- <div class="control-forwards"></div> /.control-forwards -->
-        </div><!--  /.music-player-controls -->
-      </div><!--  /.player-content-container -->
-    </div><!--  /.music-player -->
+          <a class="btn-floating btn-large waves-effect cyan" id="playBtn"><i class="material-icons">play_arrow</i></a>
+          <a class="btn-floating btn-large waves-effect cyan hide" id="pauseBtn"><i class="material-icons">pause</i></a>
+          <a class="btn-floating btn-large waves-effect cyan" id="fastBtn"><i
+              class="material-icons">fast_forward</i></a>
+          <a class="btn-floating btn-large waves-effect waves-light red" id="favBtn"><i
+              class="material-icons">favorite</i></a>
+
+        </div>
+      </div>
+    </div>
     <div class="album">
       <div class="album-art"></div><!--  /.album-art -->
-      <div class="vinyl"></div><!--  /.vinyl -->
-    </div><!--  /.album-art -->
-  </div><!--  /.music-player -->
+
+    </div>
+  </div>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script src="./player.js"></script>
 </body>
+
 </html>
