--- a/player.html
+++ b/player.html
@@ -38,6 +38,70 @@
 
     </div>
   </div>
+  </br>
+  <footer>
+    <div class="row">
+      <div class="col md-3 mb-3">
+        <div class="card">
+          <div class="card-image">
+            <img src="rap.jpg" alt="image of album">
+
+            <a class="btn-floating halfway-fab waves-effect waves-light red"><i
+                class="material-icons">play_arrow</i></a>
+          </div>
+
+        </div>
+      </div>
+      <div class="col md-3 mb-3">
+        <div class="card">
+          <div class="card-image">
+            <img src="assets/images/rap.jpg" alt="image of album">
+
+            <a class="btn-floating halfway-fab waves-effect waves-light red"><i
+                class="material-icons">play_arrow</i></a>
+          </div>
+
+        </div>
+      </div>
+
+      <div class="col md-3 mb-3">
+        <div class="card">
+          <div class="card-image">
+            <img src="rap.jpg" alt="image of album">
+
+            <a class="btn-floating halfway-fab waves-effect waves-light red"><i
+                class="material-icons">play_arrow</i></a>
+          </div>
+
+        </div>
+      </div>
+
+      <div class="col md-3 mb-3">
+        <div class="card">
+          <div class="card-image">
+            <img src="rap.jpg" alt="image of album">
+
+            <a class="btn-floating halfway-fab waves-effect waves-light red"><i
+                class="material-icons">play_arrow</i></a>
+          </div>
+
+        </div>
+      </div>
+
+      <div class="col md-3 mb-3">
+        <div class="card">
+          <div class="card-image">
+            <img src="rap.jpg" alt="image of album">
+
+            <a class="btn-floating halfway-fab waves-effect waves-light red"><i
+                class="material-icons">play_arrow</i></a>
+          </div>
+
+        </div>
+      </div>
+    </div>
+  </footer>
+
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script src="./player.js"></script>
