--- a/player.html
+++ b/player.html
@@ -39,19 +39,24 @@
     </div>
   </div>
   </br>
+  <!-- footer containing cards that will hold genre playlists so the user can click them and then switch to that genre -->
+  <!-- these all hold default images for now, may change them  -->
   <footer>
-    <div class="row">
+    <div class="row"> 
+      <!-- 1st genre -->
       <div class="col md-3 mb-3">
         <div class="card">
           <div class="card-image">
-            <img src="rap.jpg" alt="image of album">
+            <img src="assets/images/rock.jpeg" alt="image of album">
 
             <a class="btn-floating halfway-fab waves-effect waves-light red"><i
                 class="material-icons">play_arrow</i></a>
           </div>
 
         </div>
-      </div>
+      </div> 
+
+      <!-- 2nd genre -->
       <div class="col md-3 mb-3">
         <div class="card">
           <div class="card-image">
@@ -64,10 +69,11 @@
         </div>
       </div>
 
+      <!-- 3rd genre -->
       <div class="col md-3 mb-3">
         <div class="card">
           <div class="card-image">
-            <img src="rap.jpg" alt="image of album">
+            <img src="assets/images/country.jpg" alt="image of album">
 
             <a class="btn-floating halfway-fab waves-effect waves-light red"><i
                 class="material-icons">play_arrow</i></a>
@@ -76,10 +82,11 @@
         </div>
       </div>
 
+      <!-- 4th genre -->
       <div class="col md-3 mb-3">
         <div class="card">
           <div class="card-image">
-            <img src="rap.jpg" alt="image of album">
+            <img src="assets/images/rnb.jpg" alt="image of album">
 
             <a class="btn-floating halfway-fab waves-effect waves-light red"><i
                 class="material-icons">play_arrow</i></a>
@@ -88,10 +95,11 @@
         </div>
       </div>
 
+      <!-- 5th genre -->
       <div class="col md-3 mb-3">
         <div class="card">
           <div class="card-image">
-            <img src="rap.jpg" alt="image of album">
+            <img src="assets/images/pop1.jpg" alt="image of album">
 
             <a class="btn-floating halfway-fab waves-effect waves-light red"><i
                 class="material-icons">play_arrow</i></a>
