--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"
         integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+        <link href="https://fonts.googleapis.com/css2?family=Catamaran:wght@600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="assets/CSS/style.css">
 </head>
 
@@ -16,10 +17,19 @@
 
     <div class="chooseGenre">
         <h3 id="chooseTitle">Choose a Genre</h3>
-        <h5 id="chooseText">You have a maximum of five clicks. You can click on a single genre up to three times to
+        <h5 id="chooseText">You have a maximum of 5 clicks. You can click on a single genre up to three times to
             assure more of a
             chance for that specific option.</h5>
     </div>
+
+    <!-- <div class="row"> -->
+        <div class="container" id="counter">
+          <div class="card-panel teal">
+            <h6>Clicks Remaining: <span class="white-text"> 5
+            </span></h6>
+          </div>
+        </div>
+      <!-- </div> -->
 
     <div id="btnDiv"></div>
 
