styling index.html

--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
 
     <!-- <div class="row"> -->
         <div class="container" id="counter">
-          <div class="card-panel teal">
-            <h6>Clicks Remaining: <span class="white-text"> 5
+          <div class="card-panel z-depth-4">
+            <h6>Clicks Remaining: <span class="black-text"> 5
             </span></h6>
           </div>
         </div>
