--- a/player.html
+++ b/player.html
@@ -39,12 +39,22 @@
     </div>
   </div>
   </br>
+
+  <footer>
+    <div class="carousel">
+      <a class="carousel-item" href="#one!"><img src="assets/images/country.jpg"></a>
+      <a class="carousel-item" href="#two!"><img src="assets/images/pop1.jpg"></a>
+      <a class="carousel-item" href="#three!"><img src="assets/images/rap.jpg"></a>
+      <a class="carousel-item" href="#four!"><img src="assets/images/rnb.jpg"></a>
+      <a class="carousel-item" href="#five!"><img src="assets/images/rock.jpeg"></a>
+    </div>
+  </footer>
   <!-- footer containing cards that will hold genre playlists so the user can click them and then switch to that genre -->
   <!-- these all hold default images for now, may change them  -->
-  <footer>
-    <div class="row"> 
+  <!-- <footer>
+    <div class="row">  -->
       <!-- 1st genre -->
-      <div class="col md-3 mb-3">
+      <!-- <div class="col md-3 mb-3">
         <div class="card">
           <div class="card-image">
             <img src="assets/images/rock.jpeg" alt="image of album">
@@ -54,10 +64,10 @@
           </div>
 
         </div>
-      </div> 
+      </div>  -->
 
       <!-- 2nd genre -->
-      <div class="col md-3 mb-3">
+      <!-- <div class="col md-3 mb-3">
         <div class="card">
           <div class="card-image">
             <img src="assets/images/rap.jpg" alt="image of album">
@@ -67,10 +77,10 @@
           </div>
 
         </div>
-      </div>
+      </div> -->
 
       <!-- 3rd genre -->
-      <div class="col md-3 mb-3">
+      <!-- <div class="col md-3 mb-3">
         <div class="card">
           <div class="card-image">
             <img src="assets/images/country.jpg" alt="image of album">
@@ -80,10 +90,10 @@
           </div>
 
         </div>
-      </div>
+      </div> -->
 
       <!-- 4th genre -->
-      <div class="col md-3 mb-3">
+      <!-- <div class="col md-3 mb-3">
         <div class="card">
           <div class="card-image">
             <img src="assets/images/rnb.jpg" alt="image of album">
@@ -93,10 +103,10 @@
           </div>
 
         </div>
-      </div>
+      </div> -->
 
       <!-- 5th genre -->
-      <div class="col md-3 mb-3">
+      <!-- <div class="col md-3 mb-3">
         <div class="card">
           <div class="card-image">
             <img src="assets/images/pop1.jpg" alt="image of album">
@@ -108,10 +118,11 @@
         </div>
       </div>
     </div>
-  </footer>
+  </footer> -->
 
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+  <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script> -->
   <script src="./player.js"></script>
 </body>
 
