--- a/player.html
+++ b/player.html
@@ -40,6 +40,7 @@
   </div>
   </br>
 
+  <!-- add some data-genres to carousel -->
   <footer>
     <div class="carousel">
       <a class="carousel-item" href="#one!"><img src="assets/images/country.jpg"></a>
