testing youtube api

--- a/index.html
+++ b/index.html
@@ -21,7 +21,11 @@
             chance for that specific option.</h5>
     </div>
 
-    <div id="btnDiv"></div>
+    <div id="btnDivContainer">
+        <div id="btnDiv">
+            
+        </div>
+    </div>
 
     <div id="undo-reset-next">
         <div id="undo-reset">
