testing youtube api

--- a/test.html
+++ b/test.html
@@ -19,6 +19,10 @@
 <body> 
     <button onclick="authenticate().then(loadClient)">authorize and load</button>
 
+    <div> 
+        <iframe id="videoFrame" width="100%" height="auto" src="" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+    </div>
+
     <script src="./assets/scripts/music-algorithm.js"></script>
     <script async defer src="https://apis.google.com/js/api.js"
         onload="this.onload=function(){};handleClientLoad()"
