testing youtube api

--- a/test.html
+++ b/test.html
@@ -17,10 +17,8 @@
 
 
 <body> 
-    <button onclick="authenticate().then(loadClient)">authorize and load</button>
-
     <div> 
-        <iframe id="videoFrame" width="100%" height="auto" src="" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+        <iframe id="videoFrame" width="100%" height="auto" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
     </div>
 
     <script src="./assets/scripts/music-algorithm.js"></script>
