--- a/test.html
+++ b/test.html
@@ -16,14 +16,14 @@
 
 
 <body> 
-    <button id="sign-in-or-out-button"
+    <!-- <button id="sign-in-or-out-button"
           style="margin-left: 25px">Sign In/Authorize</button>
   <button id="revoke-access-button"
           style="display: none; margin-left: 25px">Revoke access</button>
 
   <button id="test">
         test
-  </button>
+  </button> -->
   
   <div id="auth-status" style="display: inline; padding-left: 25px"></div><hr>
 
