--- a/test.html
+++ b/test.html
@@ -8,22 +8,24 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"
         integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="assets/CSS/style.css">
+    <!-- <link rel="stylesheet" href="assets/CSS/style.css"> -->
     <script src="https://connect.soundcloud.com/sdk/sdk-3.3.2.js"></script>
     <script src="https://apis.google.com/js/api.js"></script>
 
 </head>
 
 
-<body> 
-    <!-- <button id="sign-in-or-out-button"
-          style="margin-left: 25px">Sign In/Authorize</button>
-  <button id="revoke-access-button"
-          style="display: none; margin-left: 25px">Revoke access</button>
-
-  <button id="test">
-        test
-  </button> -->
+<body>
+    <div id="button-div" style="display: none;">
+        <button id="sign-in-or-out-button"
+              style="margin-left: 25px">Sign In/Authorize</button>
+      <button id="revoke-access-button"
+              style="display: none; margin-left: 25px">Revoke access</button>
+    
+      <button id="test">
+            test
+      </button>
+    </div> 
   
   <div id="auth-status" style="display: inline; padding-left: 25px"></div><hr>
 
