--- a/test.html
+++ b/test.html
@@ -21,13 +21,9 @@
               style="margin-left: 25px">Sign In/Authorize</button>
       <button id="revoke-access-button"
               style="display: none; margin-left: 25px">Revoke access</button>
-    
-      <button id="test">
-            test
-      </button>
     </div> 
   
-  <div id="auth-status" style="display: inline; padding-left: 25px"></div><hr>
+  <!-- <div id="auth-status" style="display: inline; padding-left: 25px"></div><hr> -->
 
     <div style="height: 100vh;"> 
         <iframe id="videoFrame" width="100%" height="auto" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
